src/syntax/tests/data/positive/funcall.hsh
call()
dict[field](arg)
fun(many)(chained)[field](calls)
fun(many).field(chained).field.calls()
