src/syntax/tests/data/negative/funcall-2.hsh
call()
dict[field](arg)
fun(many)(chained)[field](calls.) # missing dot access identifier here.
fun(many).field(chained).field.calls()
